Fixed issue with some components not aligning vertically in forms.

--- a/src/less/components/input-group.less
+++ b/src/less/components/input-group.less
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     align-items: stretch;
     width: 100%;
+    height: ~"calc(2.25rem + 2px)";
 
     &.has-feedback {
         // Ensure icons don't overlap text
